# LMS_with_fastAPI

./: .gitignore  README.md  alembic.ini  main.py  pyproject.toml
alembic/: env.py
alembic/data/: students.json
alembic/versions/: 262d878897ac_.py  2ddb9c2b347b_moving_is_active_to_the_user_table.py  4334396f2323_.py  b5c5a2cf9f92_.py  bc9f932ac890_.py  f021072aa427_.py  f4c999fefc36_.py
api/: courses_route.py  users.py  users_route.py
api/utils/: courses_util.py  user_util.py
db/: db_setup.py
db/models/: course.py  user.py
pydanti_schemas/: courses_schemas.py  user.py  user_schemas.py
